Fix alignment of profile button in header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -51,12 +51,12 @@
 
 .linkOutline {
   color: white;
-  margin-right: 0.5rem;
+  
 }
 
 .buttonContainer {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
   align-items: center;
 }
 
@@ -73,5 +73,11 @@
 .profileImage {
   height: 2rem;
   width: 2rem;
+  margin-right: 0.5rem;
   cursor: pointer;
+}
+
+.profileImageLink {
+  display: grid;
+  align-items: center;
 }
